--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
 - postgresql
 addons:
   postgresql: '9.4'
-before_script:
+#before_script:
         #- psql -U postgres -c "create user decide password 'decide'"
   #- psql -U postgres -c "create database test_decide owner decide"
   #- psql -U postgres -c "ALTER USER decide CREATEDB"
