--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ env:
 addons:
   postgresql: '9.4'
   firefox: latest
+  apt:
+    packages:
+      firefox-geckodriver
 #before_script:
         #- psql -U postgres -c "create user decide password 'decide'"
   #- psql -U postgres -c "create database test_decide owner decide"
