--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ python:
 - '3.6'
 install:
 - pip install -r requirements.txt
+- pip install selenium
 script:
 - cd decide
 - cp travis_local_settings.py local_settings.py
